--- a/index.html
+++ b/index.html
@@ -8,211 +8,172 @@
     
     <style>
         :root {
-            --primary: #d81b60;
-            --accent: #ff4081;
-            --glass: rgba(255, 255, 255, 0.9);
-            --shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.15);
+            --primary: #8e24aa; /* ڕەنگی مۆری شاهانە */
+            --accent: #d81b60;
+            --bg-glass: rgba(255, 255, 255, 0.85);
         }
 
         body {
             font-family: 'Vazirmatn', sans-serif;
             margin: 0;
-            background: linear-gradient(135deg, #fff5f7 0%, #fce4ec 100%);
+            background: #fdf2f8;
             color: #2d3436;
-            min-height: 100vh;
         }
 
-        /* بەشی ئاگادارکردنەوەی پارەدان */
+        /* ئاگاداری پارەدان */
         .payment-alert {
-            background: linear-gradient(90deg, #d81b60, #ad1457);
+            background: #6a1b9a;
             color: white;
             text-align: center;
-            padding: 12px;
-            font-weight: 500;
-            font-size: 14px;
+            padding: 10px;
+            font-size: 13px;
             position: sticky;
             top: 0;
             z-index: 2000;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
 
+        /* هێدەر لەگەڵ وێنەی پاشبنەما */
         header {
             text-align: center;
-            padding: 60px 20px;
-            background: white;
-            border-radius: 0 0 50px 50px;
-            box-shadow: var(--shadow);
+            padding: 80px 20px;
+            background-image: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)), 
+                              url('https://images.unsplash.com/photo-1519304812571-01522234fe72?auto=format&fit=crop&w=1000');
+            background-size: cover;
+            background-position: center;
+            border-radius: 0 0 40px 40px;
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
         }
 
         .logo {
-            font-size: 45px;
+            font-size: 40px;
             font-weight: 800;
             color: var(--primary);
-            letter-spacing: -1px;
-            margin-bottom: 10px;
+            text-shadow: 2px 2px 4px rgba(255,255,255,0.5);
+            margin: 0;
         }
 
         .welcome-card {
-            max-width: 800px;
-            margin: -30px auto 30px;
-            background: var(--glass);
-            backdrop-filter: blur(4px);
-            padding: 30px;
+            max-width: 650px;
+            margin: -40px auto 30px;
+            background: var(--bg-glass);
+            backdrop-filter: blur(10px);
+            padding: 25px;
             border-radius: 20px;
-            border: 1px solid rgba(255,255,255,0.18);
-            box-shadow: var(--shadow);
-            line-height: 1.8;
-            font-size: 17px;
-            text-align: justify;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+            text-align: center;
+            font-size: 16px;
+            border: 1px solid white;
         }
 
-        /* مەرجی پارەدان لەناو سایتەکە */
         .policy-box {
-            background: #fff3f3;
-            border-right: 5px solid var(--primary);
-            padding: 15px;
-            margin: 20px 0;
-            border-radius: 8px;
-            font-weight: 500;
-            color: #ad1457;
+            background: #f3e5f5;
+            border-right: 4px solid var(--primary);
+            padding: 10px;
+            margin-top: 15px;
+            font-weight: 600;
+            color: var(--primary);
+            font-size: 14px;
         }
 
         .container {
-            max-width: 1200px;
+            max-width: 1100px;
             margin: 40px auto;
             padding: 20px;
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-            gap: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 25px;
         }
 
         .flower-card {
             background: white;
-            border-radius: 25px;
+            border-radius: 20px;
             overflow: hidden;
-            transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            transition: 0.3s;
             border: 1px solid rgba(0,0,0,0.05);
-            position: relative;
         }
 
         .flower-card:hover {
-            transform: scale(1.03);
-            box-shadow: 0 20px 40px rgba(0,0,0,0.12);
+            transform: translateY(-10px);
+            box-shadow: 0 15px 35px rgba(142, 36, 170, 0.15);
         }
 
         .flower-card img {
             width: 100%;
-            height: 320px;
+            height: 280px;
             object-fit: cover;
         }
 
-        .badge {
-            position: absolute;
-            top: 15px;
-            right: 15px;
-            background: rgba(255,255,255,0.9);
-            padding: 5px 15px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: bold;
-            color: var(--primary);
-        }
-
         .info {
-            padding: 25px;
+            padding: 20px;
+            text-align: center;
         }
 
         .price {
-            font-size: 24px;
+            font-size: 22px;
             font-weight: 800;
             color: var(--primary);
             display: block;
-            margin: 10px 0;
+            margin-bottom: 15px;
         }
 
         .order-btn {
             width: 100%;
-            background: linear-gradient(45deg, var(--primary), var(--accent));
+            background: var(--primary);
             color: white;
             border: none;
-            padding: 15px;
-            border-radius: 15px;
+            padding: 12px;
+            border-radius: 12px;
             font-family: 'Vazirmatn';
             font-weight: 600;
-            font-size: 17px;
             cursor: pointer;
             transition: 0.3s;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 10px;
         }
 
         .order-btn:hover {
-            opacity: 0.9;
-            letter-spacing: 1px;
+            background: var(--accent);
         }
 
         footer {
-            background: #1a1a1a;
-            color: #999;
-            padding: 50px 20px;
             text-align: center;
-            margin-top: 80px;
-        }
-
-        .payment-methods {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 15px;
-        }
-
-        .payment-methods span {
-            background: #333;
-            padding: 5px 15px;
-            border-radius: 5px;
-            color: white;
-            font-size: 13px;
+            padding: 40px;
+            color: #777;
+            font-size: 14px;
         }
     </style>
 </head>
 <body>
 
 <div class="payment-alert">
-    📢 ئاگاداری: بۆ چەسپاندنی داواکارییەکەت، پێویستە نیوەی پارەکە لەڕێگەی FIB یان FastPay بنێردرێت.
+    📢 پێویستە ٥٠٪ی پارەکە بە شێوەی پێشوەختە بە (FIB / FastPay) بنێردرێت.
 </div>
 
 <header>
-    <div class="logo">ELIAN FLOWERS</div>
-    <div style="color: #ad1457; font-weight: 500; letter-spacing: 2px;">گوڵفرۆشی ئیلیان</div>
+    <h1 class="logo">ELIAN FLOWERS</h1>
+    <p style="color: #444; font-weight: 500;">گوڵفرۆشی ئیلیان</p>
 </header>
 
 <div class="welcome-card">
-    بەخێربێن بۆ گوڵفرۆشی ئیلیان کە ئێمە ڕێکخستنی گوڵی جوان و دەستی بۆ هەموو بۆنەیەک دروست دەکەین. گوڵفرۆشە شارەزاکانمان بە وریاییەوە هەر دەستە گوڵێک دیزاین دەکەن، هەڵبژاردنی بەرفراوانی گوڵی تازە پێشکەش دەکەن. داواکردنی ئاسان بە شێوەی ئۆنلاین دڵنیای دەدات کە دەتوانیت بە ئاسانی ڕێکخستنی تەواو هەڵبژێریت و بنێری، لەگەڵ گەیاندنی خێرا بۆ بەردەم دەرگاکەت.
+    بەخێربێن بۆ گوڵفرۆشی ئیلیان؛ شوێنی دیزاینە ناوازەکان و گوڵی تازە بۆ هەموو بۆنەیەک. داواکردنی ئاسان و گەیاندنی خێرا بۆ بەردەم دەرگاکەت.
     
     <div class="policy-box">
-        ⚠️ تکایە ئاگاداربە: پێش ناردنی هەر داواکارییەک، دەبێت ٥٠٪ی تێچووەکە بە شێوەی پێشوەختە (FIB / FastPay) بنێردرێت.
+        ⚠️ نیوەی تێچووەکە پێشوەختە وەردەگیرێت بۆ دڵنیابوون لە داواکارییەکەت.
     </div>
 </div>
 
-<div class="container" id="flower-list"></div>
+<div class="container" id="flower-list">
+    </div>
 
 <footer>
-    <p>هەموو مافەکان پارێزراوە بۆ گوڵفرۆشی ئیلیان &copy; ٢٠٢٦</p>
-    <div class="payment-methods">
-        <span>FastPay</span>
-        <span>FIB</span>
-        <span>Cash on Delivery</span>
-    </div>
+    گوڵفرۆشی ئیلیان &copy; ٢٠٢٦ | خزمەتگوزاری گەیاندنی خێرا
 </footer>
 
 <script>
+    // وێنەکان لێرەن و دەتوانیت ناویان بگۆڕیت
     const flowers = [
-        { name: "باکسی ئیلیانی ناوازە", price: "٣٥,٠٠٠ د.ع", img: "gull1.jpg", tag: "پڕفرۆشترین" },
-        { name: "چەپکە گوڵی پەمەیی", price: "٢٠,٠٠٠ د.ع", img: "gull2.jpg", tag: "نوێ" },
-        { name: "گوڵەباخی سووری شاهانە", price: "٢٥,٠٠٠ د.ع", img: "gull3.jpg", tag: "دیاری" },
-        { name: "تێکەڵەی گوڵی دەگمەن", price: "٤٥,٠٠٠ د.ع", img: "gull4.jpg", tag: "ناوازە" }
+        { name: "باکسی ئیلیانی تایبەت", price: "٣٥,٠٠٠ د.ع", img: "gull1.jpg" },
+        { name: "چەپکە گوڵی پەمەیی", price: "٢٠,٠٠٠ د.ع", img: "gull2.jpg" },
+        { name: "گوڵەباخی سووری شاهانە", price: "٢٥,٠٠٠ د.ع", img: "gull3.jpg" },
+        { name: "تێکەڵەی گوڵی دەگمەن", price: "٤٥,٠٠٠ د.ع", img: "gull4.jpg" }
     ];
 
     const list = document.getElementById('flower-list');
@@ -220,22 +181,19 @@
     flowers.forEach(f => {
         list.innerHTML += `
             <div class="flower-card">
-                <span class="badge">${f.tag}</span>
                 <img src="${f.img}" alt="${f.name}">
                 <div class="info">
                     <h3>${f.name}</h3>
                     <span class="price">${f.price}</span>
-                    <button class="order-btn" onclick="order('${f.name}')">
-                        داواکردن لە واتسئەپ 💬
-                    </button>
+                    <button class="order-btn" onclick="order('${f.name}')">داواکردن</button>
                 </div>
             </div>
         `;
     });
 
     function order(name) {
-        const phone = "964750XXXXXXX"; // ژمارەی خۆت لێرە بنووسە
-        const msg = encodeURIComponent(`سڵاو، دەمەوێت ئەمە داوا بکەم: ${name}\nئاگادارم کە دەبێت نیوەی پارەکە بە (FIB/FastPay) بنێرم.`);
+        const phone = "964750XXXXXXX"; // ژمارەی خۆت لێرە دابنێ
+        const msg = encodeURIComponent(`سڵاو، دەمەوێت ئەمە داوا بکەم: ${name}\nئاگادارم کە دەبێت ٥٠٪ی پارەکە بە پێشوەختە بنێرم.`);
         window.location.href = `https://wa.me/${phone}?text=${msg}`;
     }
 </script>
