--- a/index.html
+++ b/index.html
@@ -3,35 +3,163 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>گوڵفرۆشی ئیلیان</title>
+    <title>ئیلیان فڵاوەرز | Elian Flowers</title>
+    <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;500;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@400;700&display=swap');
-        body { font-family: 'Noto Sans Arabic', sans-serif; background-color: #fff5f7; margin: 0; text-align: center; }
-        header { background: #ff4d6d; color: white; padding: 25px; font-size: 28px; font-weight: bold; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
-        .container { padding: 20px; display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
-        .card { background: white; border-radius: 15px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); width: 300px; overflow: hidden; transition: 0.3s; }
-        .card:hover { transform: translateY(-5px); }
-        .card img { width: 100%; height: 250px; object-fit: cover; }
-        .card h3 { color: #ff4d6d; margin: 15px 0; font-size: 22px; }
-        .price { font-size: 18px; color: #555; margin-bottom: 15px; }
-        .btn { background: #25d366; color: white; padding: 12px 25px; border: none; border-radius: 50px; cursor: pointer; text-decoration: none; display: inline-block; margin-bottom: 20px; font-weight: bold; }
+        :root {
+            --primary: #2d3436;
+            --rose: #e84393;
+            --gold: #d4af37;
+            --bg: #fffbfb;
+        }
+
+        * { box-sizing: border-box; scroll-behavior: smooth; }
+
+        body {
+            font-family: 'Vazirmatn', sans-serif;
+            margin: 0;
+            background: var(--bg);
+            overflow-x: hidden;
+        }
+
+        /* Loading Animation */
+        .loader {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: white; display: flex; justify-content: center; align-items: center;
+            z-index: 9999; transition: 0.5s;
+        }
+
+        /* Hero Section - زۆر لوکس */
+        .hero {
+            height: 90vh;
+            background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
+                        url('https://images.unsplash.com/photo-1526047932273-341f2a7631f9?auto=format&fit=crop&w=1600&q=80');
+            background-size: cover; background-position: center; background-attachment: fixed;
+            display: flex; flex-direction: column; justify-content: center; align-items: center;
+            color: white; text-align: center; clip-path: ellipse(150% 100% at 50% 0%);
+        }
+
+        .hero h1 { 
+            font-size: clamp(40px, 8vw, 80px); margin: 0; 
+            font-weight: 800; letter-spacing: -2px;
+            animation: fadeInUp 1s;
+        }
+
+        .hero p { font-size: 20px; opacity: 0.9; animation: fadeInUp 1.5s; }
+
+        /* Floating WhatsApp */
+        .float-wa {
+            position: fixed; bottom: 30px; left: 30px; 
+            background: #25d366; color: white; width: 60px; height: 60px;
+            border-radius: 50%; display: flex; justify-content: center; align-items: center;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.2); z-index: 1000;
+            text-decoration: none; font-size: 30px; animation: pulse 2s infinite;
+        }
+
+        /* Product Cards - وەک سایتە گرانبەهاکان */
+        .section-title { text-align: center; margin: 80px 0 40px; }
+        .section-title h2 { font-size: 35px; color: var(--primary); position: relative; display: inline-block; }
+        .section-title h2::after { content: ''; width: 50px; height: 3px; background: var(--rose); position: absolute; bottom: -10px; right: 0; }
+
+        .grid {
+            max-width: 1200px; margin: 0 auto; padding: 20px;
+            display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 40px;
+        }
+
+        .card {
+            background: white; border-radius: 0; overflow: hidden;
+            transition: 0.5s; border: 1px solid #eee; position: relative;
+        }
+
+        .card:hover { transform: translateY(-10px); box-shadow: 0 20px 40px rgba(0,0,0,0.1); }
+
+        .card img { width: 100%; height: 400px; object-fit: cover; transition: 0.8s; }
+        .card:hover img { transform: scale(1.1); }
+
+        .card-info { padding: 25px; text-align: center; background: white; }
+        .card-info h3 { font-size: 22px; margin: 0 0 10px; }
+        .price { color: var(--rose); font-weight: 800; font-size: 20px; display: block; margin-bottom: 20px; }
+
+        .buy-btn {
+            background: var(--primary); color: white; text-decoration: none;
+            padding: 12px 30px; display: inline-block; font-weight: 600;
+            border: 1px solid var(--primary); transition: 0.3s;
+        }
+
+        .buy-btn:hover { background: transparent; color: var(--primary); }
+
+        /* Payment Section */
+        .payment-box {
+            background: #fdf2f8; padding: 60px 20px; text-align: center; margin-top: 100px;
+        }
+
+        .methods { display: flex; justify-content: center; gap: 20px; margin-top: 30px; }
+        .method-item { background: white; padding: 15px 30px; border-radius: 10px; font-weight: 800; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
+
+        @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.1); } 100% { transform: scale(1); } }
     </style>
 </head>
 <body>
-    <header>گوڵفرۆشی ئیلیان 🌸</header>
-    <div class="container">
-        <div class="card">
-            <img src="https://images.unsplash.com/photo-1561181286-d3fee7d55364?w=500" alt="Rose">
-            <h3>بوکێتی سووری شاهانە</h3>
-            <p class="price">نرخ: ٢٥,٠٠٠ دینار</p>
-            <a href="https://wa.me/9647500000000" class="btn">داواکردن لە واتسئەپ</a>
-        </div>
-        <div class="card">
-            <img src="https://images.unsplash.com/photo-1526047932273-341f2a7631f9?w=500" alt="Pink">
-            <h3>بوکێتی پەمەیی ناسک</h3>
-            <p class="price">نرخ: ٢٠,٠٠٠ دینار</p>
-            <a href="https://wa.me/9647500000000" class="btn">داواکردن لە واتسئەپ</a>
-        </div>
+
+<div class="loader" id="loader">
+    <h2 class="animate__animated animate__heartBeat animate__infinite" style="color: #e84393;">ئیلیان...</h2>
+</div>
+
+<a href="https://wa.me/9647519568548" class="float-wa">💬</a>
+
+<div class="hero">
+    <h1 class="animate__animated animate__fadeInDown">گوڵفرۆشی ئیلیان</h1>
+    <p class="animate__animated animate__fadeInUp">دیارییەک بۆ ئەوانەی شایەنی باشترینن</p>
+    <a href="#products" style="color: white; margin-top: 30px; text-decoration: none; border-bottom: 2px solid white;">ببینە</a>
+</div>
+
+<div class="section-title" id="products">
+    <h2>کۆلێکشنی نوێ</h2>
+</div>
+
+<div class="grid" id="flower-grid"></div>
+
+<div class="payment-box">
+    <h2>شێوازەکانی پارەدان</h2>
+    <p>بۆ دڵنیایی لە جێگیرکردنی داواکاری، نیوەی بڕەکە پێشوەختە وەردەگیرێت</p>
+    <div class="methods">
+        <div class="method-item" style="color: #6a1b9a;">FIB</div>
+        <div class="method-item" style="color: #d81b60;">FastPay</div>
     </div>
+</div>
+
+<footer style="padding: 40px; text-align: center; font-size: 12px; color: #999;">
+    ELIAN FLOWERS &copy; 2026 - هەمیشە جیاواز
+</footer>
+
+<script>
+    // لۆدینگەکە لادەبات دوای تەواوبوونی سایتەکە
+    window.onload = () => { document.getElementById('loader').style.opacity = '0'; setTimeout(() => { document.getElementById('loader').style.display = 'none'; }, 500); };
+
+    const flowers = [
+        { name: "ئیلیان سیگنێچەر", price: "٤٥,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1561181286-d3fee7d55364?w=800" },
+        { name: "باکسی ڕێد ڕۆز", price: "٣٠,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1548610762-65ca0615f399?w=800" },
+        { name: "چەپکە گوڵی میترا", price: "٢٥,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1526047932273-341f2a7631f9?w=800" },
+        { name: "گوڵی مۆری لوکس", price: "٥٥,٠٠٠ د.ع", img: "https://images.unsplash.com/photo-1582794543139-8ac9cb0f7b11?w=800" }
+    ];
+
+    const grid = document.getElementById('flower-grid');
+    flowers.forEach(f => {
+        const msg = encodeURIComponent(`سڵاو ئیلیان فڵاوەرز، حەز دەکەم ئەمە داوا بکەم: ${f.name}`);
+        grid.innerHTML += `
+            <div class="card">
+                <img src="${f.img}" alt="${f.name}">
+                <div class="card-info">
+                    <h3>${f.name}</h3>
+                    <span class="price">${f.price}</span>
+                    <a href="https://wa.me/9647519568548?text=${msg}" class="buy-btn">داواکردن</a>
+                </div>
+            </div>
+        `;
+    });
+</script>
+
 </body>
 </html>
